--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,132 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root{
+    --color-primary: #3577f0;
+    --light-primary: #8c71db;
+    --color-secondary: #ff497c;
+    --color-tertiary: #FAB8C4;
+    --color-white: #ffffff;
+    --color-dark: #27272E;
+    --color-black: #000000;
+    --color-light: #CBD3D9;
+    --color-lighter: #F6F7FB;
+    --color-lightest: #C4C4C4;
+    --color-chart01: #896BA7;
+    --color-chart02: #BADEFF;
+    --color-chart03: #E76458;
+    --color-heading: #292930;
+    --color-body: #777777;
+    --color-border-light: #E3E6E9;
+    --color-border-dark: #42424A;
+    --color-gray: #999FAE;
+    --color-midgray: #878787;
+    --color-extra01: #999FAE;
+    --color-success: #3EB75E;
+    --color-danger: #FF0003;
+    --color-warning: #FF8F3C;
+    --color-info: #1BA2DB;
+    --color-facebook: #3B5997;
+    --color-twitter: #1BA1F2;
+    --color-youtube: #ED4141;
+    --color-linkedin: #0077B5;
+    --color-pinterest: #E60022;
+    --color-instagram: #C231A1;
+    --color-vimeo: #00ADEF;
+    --color-twitch: #6441A3;
+    --color-discord: #7289da;
+    --radius: 6px;
+    --radius-big: 16px;
+    --radius-small: 6px;
+    --border-width: 2px;
+    --border-thin: 1px;
+    --p-light: 300;
+    --p-regular: 400;
+    --p-medium: 500;
+    --p-semi-bold: 600;
+    --p-bold: 700;
+    --p-extra-bold: 800;
+    --p-black: 900;
+    --s-light: 300;
+    --s-regular: 400;
+    --s-medium: 500;
+    --s-bold: 700;
+    --s-black: 900;
+    --shadow-primary: 0px 4px 10px rgba(37, 47, 63, 0.1);
+    --shadow-light: 0 2px 6px 0 rgba(0, 0, 0, 0.05);
+    --shadow-dark: 0 16px 32px 0 rgba(0, 0, 0, 0.04);
+    --transition: 0.3s;
+    --font-primary: "DM Sans", sans-serif;
+    --font-secondary: "DM Sans", sans-serif;
+    --font-awesome: "Font Awesome 6 Pro";
+    --font-size-b1: 16px;
+    --font-size-b2: 14px;
+    --font-size-b3: 12px;
+    --line-height-b1: 1.7;
+    --line-height-b2: 1.65;
+    --line-height-b3: 1.6;
+    --h1: 46px;
+    --h2: 36px;
+    --h3: 28px;
+    --h4: 24px;
+    --h5: 20px;
+    --h6: 18px;
+}
+
+.axil-section-gap {
+    padding: 80px 0;
+}
+.axil-dashboard-warp .axil-dashboard-author {
+    margin-bottom: 50px;
+}
+.axil-dashboard-warp .axil-dashboard-author .media {
+    align-items: center;
+}
+.axil-dashboard-warp .axil-dashboard-author .thumbnail {
+    margin-bottom: 10px;
+}
+.axil-dashboard-warp .axil-dashboard-author .joining-date {
+    font-size: 14px;
+    color: var(--color-body);
+    font-weight: var(--s-medium);
+}
+.axil-dashboard-aside {
+    border: 1px solid var(--color-light);
+    padding: 40px 35px 30px;
+    border-radius: 6px;
+}
+.axil-dashboard-aside .nav-tabs {
+    border-bottom: none;
+}
+.axil-dashboard-aside .nav-link {
+    font-weight: 500;
+    color: var(--color-body);
+    font-size: var(--font-size-b2);
+    position: relative;
+    border-radius: 6px;
+    padding: 9px 10px 9px 55px;
+    margin-bottom: 8px;
+    transition: var(--transition);
+    border: none;
+    width: 100%;
+}
+.axil-dashboard-aside .nav-link:hover {
+    background-color: var(--color-lighter);
+    color: var(--color-primary);
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: var(--bs-nav-tabs-link-active-color);
+    background-color: var(--bs-nav-tabs-link-active-bg);
+    border-color: var(--bs-nav-tabs-link-active-border-color);
+}
+.axil-dashboard-aside .nav-link i {
+    position: absolute;
+    top: 12px;
+    left: 24px;
+    font-size: 18px;
+}
+.axil-dashboard-aside .nav-link.active, .axil-dashboard-aside .nav-link:hover {
+    background-color: var(--color-lighter);
+    color: var(--color-primary);
+}
